# la-server

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
app/: __init__.py  camp_time.py  config.py  database.py  errors.py  logging_config.py  models.py  openapi_spec.py  peak_tracking.py  utils.py  village_config.py
app/auth/: __init__.py  decorations.py  routes.py
app/repositories/: __init__.py  attendance.py  auth.py  base.py  company.py  company_jobs_max.py  employee.py  job_assignment.py  job_assignment_history.py  part_time.py
app/routes/: __init__.py  attendance.py  companies.py  company_jobs_max.py  employees.py  health.py  job_assignment.py  job_assignment_history.py  openapi_docs.py  part_time.py  village_data.py
app/schemas/: __init__.py  attendance.py  auth.py  company.py  company_jobs_max.py  employee.py  job_assignment.py  job_assignment_history.py  part_time.py
app/services/: __init__.py  attendance.py  auth.py  company.py  company_jobs_max.py  employee.py  job_assignment.py  (+2 more)
data/: requirements.txt  village.ini
docs/: database_design.md  developer-guide.md
scripts/: bulk_import_company_jobs_max.py  bulk_import_employees.py  bulk_import_part_time.py  setup.ps1  setup.sh
tests/: conftest.py  test_02_health.py  test_03_error_handlers.py  test_05_bulk_import_company.py  test_06_bulk_import_employee.py  test_07_bulk_import_part_time.py  test_08_bulk_import_company_jobs_max.py  test_09_auth_api.py  test_10_auth_api.py  test_10_company_api.py  test_11_employee_api.py  test_12_employee_api.py  test_12_job_assignment.py  test_13_village_api.py  test_18_village_api.py  test_20_company_bulk_api.py  test_20_employee_api.py  test_21_employee_bulk_api.py  test_21_part_time_api.py  test_22_employee_parttime.py  test_23_attendance_api.py  test_25_company_api.py  test_26_company_jobs_max_api.py  test_27_company_jobs_max.py  test_30_job_assignment.py  test_30_openapi.py  test_31_job_assignment_history.py  test_55_village_api.py  test_60_openapi.py  test_80_company_bulk_api.py  test_81_employee_bulk_api.py  test_camp_time.py  test_part_time_helpers.py  test_utils.py
(+3 files in other folders)
